Cleaning up some CSS and attempting to make things more visible (overflow still has issues)

--- a/sentry/media/styles/global.css
+++ b/sentry/media/styles/global.css
@@ -23,10 +23,6 @@ h2 { margin-bottom:.4em; font-weight: normal; margin-top: .8em; margin-left: .1e
 h2 span { font-size:80%; color:#666; font-weight:normal; }
 h3 { margin:1em 0 .5em 0; }
 h4 { margin:0 0 .5em 0; font-weight: normal; }
-table { border:1px solid #ccc; border-collapse: collapse; width:100%; background:white; }
-tbody td, tbody th { vertical-align:top; padding:2px 3px; }
-thead th { padding:1px 6px 1px 3px; background:#fefefe; text-align:left; font-weight:normal; font-size:11px; border:1px solid #ddd; }
-tbody th { width:12em; text-align:right; color:#666; padding-right:.5em; }
 a { color: #333; }
 a:visited { color: inherit; }
 ul { margin: 1em 0 1em 2em; }
@@ -156,18 +152,27 @@ pre {
 #sidebar .chart { margin-bottom: 1em; }
 
 /* tracebacks */
-table { border:1px solid #ccc; border-collapse: collapse; width:100%; background:white; }
-tbody td, tbody th { vertical-align:top; padding:2px 3px; }
-thead th { padding:1px 6px 1px 3px; background:#fefefe; text-align:left; font-weight:normal; font-size:11px; border:1px solid #ddd; }
-tbody th { width:12em; text-align:right; color:#666; padding-right:.5em; }
-table.vars { margin:5px 0 2px 40px; }
-table.vars td, table.req td { font-family:monospace; }
-table td.code { width:100%; }
-table td.code div { overflow:hidden; }
+.frame table.vars { margin:5px 0 2px 40px; }
+table.vars tbody td:first-child { padding-right: 20px; }
+table.vars td { font-family:monospace; }
+table.vars td.code { overflow: hidden; }
+table.vars td.code pre {
+    white-space: pre-wrap;       /* CSS-3                  */
+    white-space: -moz-pre-wrap;  /* Mozilla, since 1999    */
+    white-space: -pre-wrap;      /* Opera 4-6              */
+    white-space: -o-pre-wrap;    /* Opera 7                */
+    word-wrap: break-word;       /* Internet Explorer 5.5+ */
+}
+div.pastebin textarea { padding: 10px; }
+table.vars { border:1px solid #ccc; border-collapse: collapse; background:white; }
+table tbody td, table tbody th { vertical-align:top; padding:2px 3px; }
+table.meta th { text-align: right; white-space: nowrap; }
+table.vars thead th { padding:3px 6px 3px 3px; background:#eee; text-align:left; font-weight:bold; border:1px solid #ddd; font-size:11px; }
+
 table.source th { color:#666; }
 table.source td { font-family:monospace; white-space:pre; border-bottom:1px solid #eee; }
 ul.traceback { list-style-type:none; }
-ul.traceback li.frame { margin-bottom:1em; overflow: hidden; }
+ul.traceback li.frame { margin-bottom:1em; overflow: hidden; position: relative; }
 div.context { margin: 10px 0; }
 div.context ol { padding-left:30px; margin:0 10px; list-style-position: inside; }
 div.context ol li { font-family:monospace; white-space:pre; color:#666; cursor:pointer; }
@@ -175,21 +180,26 @@ div.context ol.context-line li { color:black; background-color:#ccc; }
 div.context ol.context-line li span { float: right; }
 div.commands { margin-left: 40px; }
 div.commands a { color:black; text-decoration:none; }
-#template, #template-not-exist { background:#f6f6f6; margin-top: 1em; overflow: hidden;}
+#template, #template-not-exist { background:#f6f6f6; margin-top: 1em; overflow: hidden; }
 #template-not-exist ul { margin: 0 0 0 20px; }
 #unicode-hint { background:#eee; }
 #traceback { background:#eee; padding: 10px; }
-#requestinfo { background:#f6f6f6; padding: 10px; padding-left:120px; margin-top: 1em; overflow: hidden; }
 #summary { background: #ffc; padding: 10px; }
 #summary h2 { font-weight: normal; color: #666; }
 #explanation { background:#eee; }
-#summary table { border:none; background:transparent; }
-#requestinfo h2, #requestinfo h3 { position:relative; margin-left:-100px; }
-#requestinfo h3 { margin-bottom:-1em; }
+#summary table { border:none; background:inherit; }
 #reporter_body {
     padding: 8px;
     background: none repeat scroll 0 0 #FFFFCC
 }
+
+/** variables **/
+#requestinfo { padding: 10px; margin-top: 1em; }
+#requestinfo > table { border: 0; width: 100%; }
+#requestinfo th.key, td.values { padding: 0 0 20px; position: relative; }
+#requestinfo th.key { vertical-align: top; font-size: 1.1em; text-align: left; padding-right: 30px; }
+#requestinfo td.values td {  }
+#requestinfo td.values th { text-align: left; }
 #reporter_body #traceback li { list-style-type: inherit; }
 #reporter_body #traceback { padding: 8px; margin-top: 10px; }
 #reporter_body td, #reporter_body th { border-bottom: 0; font:small sans-serif; line-height: auto; }
